<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_mood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:background="@drawable/angle_circle_left"
        android:id="@+id/back_button_mood"
        android:contentDescription="TODO">
    </ImageButton>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/source_sans_pro"
        android:lines="1"
        android:text="@string/how_are_you_feeling_today"
        android:textSize="30sp"
        android:textStyle="normal" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20sp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:text="@string/happy_excited"
            android:fontFamily="@font/source_sans_pro"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:text="@string/sad_tired"
            android:fontFamily="@font/source_sans_pro"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:text="@string/not_hungry"
            android:fontFamily="@font/source_sans_pro"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:text="@string/neutral"
            android:fontFamily="@font/source_sans_pro"
            android:textStyle="bold" />
    </RadioGroup>


    <Button
        android:id="@+id/Button_next_mood"
        android:layout_width="275sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75sp"
        android:layout_marginTop="80sp"
        android:background="@drawable/button_resource"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/next"
        android:textStyle="bold" />


</LinearLayout>
