<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dietary_restriction"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button_dietary_preferences"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:background="@drawable/angle_circle_left"
        tools:ignore="ContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="381dp"
        android:layout_height="72dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/source_sans_pro"
        android:lines="2"
        android:text="@string/do_you_have_any_dietary_restrictions"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button_dietary_preferences" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButton_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/vegetarian"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/vegan"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_pescitarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/pescitarian"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_non_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/non_vegetarian_without_red_meat"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_gluten_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/gluten_free"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_no_restrictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/no_restrictions"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/Button_next_dietary_restrictions"
        android:layout_width="275sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/button_resource"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/next"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
