<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recipe_fragment_scroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/recipe_fragment_container">


        <ImageView
            android:id="@+id/into_button"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginStart="0sp"
            android:layout_marginTop="0sp"
            android:background="@drawable/angle_circle_left"
            android:clipToOutline="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginTop="16sp"
            android:text="Recipe Title"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/image_style"
            android:clipToOutline="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginTop="16sp"
            android:text="@string/recipe_description"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginTop="16sp"
            android:text="@string/description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nutritionalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutritional_value"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16sp" />

        <TextView
            android:id="@+id/recipe_nutritional_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginTop="16sp"
            android:text="@string/nutritional_value_of_dish"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingredients"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16sp"/>

        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recipe Ingredients"
            android:textSize="16sp"
            android:layout_marginTop="16sp"/>

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Instructions"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16sp"/>

        <TextView
            android:id="@+id/recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/recipe_instructions"
            android:textSize="16sp" />

        <Button
            android:id="@+id/fetch_ingredients"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:text="@string/fetch_ingredients"
            android:background="@drawable/button_resource"
            android:fontFamily="@font/source_sans_pro"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>
</ScrollView>
