<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="600sp"
        android:layout_marginTop="40sp"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recipe_list_item" />

    <!-- Lottie Animation for loading -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cooking_animation" />

    <!-- Loading TextView -->
    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:lines="3"
        android:text="@string/sending_some_tasty_recipes_your_way"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_animation" />

    <!-- Fragment Container -->

    <!-- Buttons Container -->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_recycler_view"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/refresh_recipes_button"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="664dp"
        android:background="@drawable/refresh"
        android:text="@string/refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recipe_recycler_view" />

    <ImageButton
        android:id="@+id/edit_preferences_button"
        android:layout_width="33sp"
        android:layout_height="33sp"

        android:layout_marginTop="664dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/floppy_disk_pen_12400816"
        android:backgroundTint="@color/custom_green"
        android:text="@string/edit_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/recipe_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
